syntax = "proto3";

option go_package = "/protos";

import "google/api/annotations.proto";

message UserSignUp {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  UserPrefs prefs = 5;
}

message UserPrefs {
  int32 userid = 1;
  int32 goodwithkids = 2;
  int32 goodwithdogs = 3;
}

message UserSignUpResponse {
  int64 id = 1;
}

message UserGetAllResponse {
  string name = 1;
}

message UserGetAllRequest {

}

service Users {

  rpc Create(UserSignUp) returns (UserSignUpResponse) {
      option (google.api.http) = {
          post: "/users/create",
          body: "*"
      };
  }
  rpc GetAll(UserGetAllRequest) returns (UserGetAllResponse) {
      option (google.api.http) = {
          get: "/users",
          body: "*"
      };
  }
 
}